# whisper-experiments

./: .gitignore  Cargo.toml  LICENSE  README.md  download_model.sh
.github/workflows/: branch-protection.yml
llama/: Cargo.toml
llama/src/: main.rs
model/: .gitignore  download_model.sh
src/: decoder.rs  json.rs  main.rs  signal_processing.rs
src/signal_processing/: file.rs
whisper/: Cargo.toml
whisper/src/: decoder.rs  json.rs  main.rs  signal_processing.rs
whisper/src/signal_processing/: file.rs
