[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
candle-core = { version = "0.8.2", features = ["metal"] }
candle-nn = { version = "0.8.2", features = ["accelerate", "metal"] }
candle-transformers = { version = "0.8.2", features = ["accelerate", "metal"] }
hf-hub = { version = "0.4.1", features = ["rustls-tls"] }
rand = "0.9.0"
rand_distr = "0.5.0"
serde_json = "1.0.138"
symphonia = "0.5.4"
tokenizers = "0.21.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
