[package]
name = "llama"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
serde_json = "1.0.148"
tokenizers = "0.22.2"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[features]
metal = [
  "candle-nn/metal",
  "candle-nn/accelerate",
  "candle-transformers/metal",
  "candle-transformers/accelerate",
  "candle-core/metal",
  "candle-core/accelerate"
]
