[package]
name = "whisper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
byteorder = "1.5.0"
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
hound = "3.5.1"
regex = "1.11.2"
serde = "1.0.219"
serde_json = "1.0.143"
tokenizers = "0.22.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[features]
metal = [
  "candle-nn/metal",
  "candle-nn/accelerate",
  "candle-transformers/metal",
  "candle-transformers/accelerate",
  "candle-core/metal",
  "candle-core/accelerate"
]
